--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <title>Page Title</title>
 
 <body>
+   <h1>This is a Heading</h1>
    <p>first paragraph.</p>
+   <p>This is a paragraph.</p>
    <p>This is another paragraph.</p>
 </body>
 
